# spdtmr

./: .gitignore  CMakeLists.txt  LICENCE  README.md
.github/docs/: TODO.md
core/: Program.cs  spdtmrcore.csproj
src/: Program.cs  spdtmr.csproj
src/application/: main.cc  main.py  program.cc
src/application/engine/: app_init.cc  app_init.h  win_timer.cc  win_timer.h
src/application/windows/: win_timer.cc  win_timer.h
src/lib/: core.c  libspdtmr.h
src/lib/module/: decls.c  libspdtmr.h
src/mvvm/: SpdtmrApp.axaml  SpdtmrApp.axaml.cs  ViewLocator.cs
src/mvvm/viewmodels/: TimerWindowViewModel.cs  ViewModelBase.cs
src/mvvm/views/timer/: TimerWindow.axaml  TimerWindow.axaml.cs
ui/: ViewLocator.cs  ViewModelBase.cs  spdtmrui.csproj
ui/app/: SpdtmrApp.axaml  SpdtmrApp.axaml.cs
ui/timer/: TimerWindow.axaml  TimerWindow.axaml.cs  TimerWindowViewModel.cs
